--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,9 @@ dependencies:
   json_serializable: 6.7.1
 
   equatable: 2.0.5
+  rename: 3.0.1
+  logger: 2.0.2+1
+  intl: 0.19.0
 
 dev_dependencies:
   flutter_test:
