--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
+  intl: 0.18.1
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -52,7 +55,6 @@ dependencies:
   equatable: 2.0.5
   rename: 3.0.1
   logger: 2.0.2+1
-  intl: 0.19.0
   package_info_plus: 5.0.1
   device_info_plus: 9.1.1
   
@@ -64,6 +66,7 @@ dev_dependencies:
     sdk: flutter
 
   build_runner: 2.4.7
+  flutter_gen_runner: 5.4.0
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -77,7 +80,7 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
-
+  generate: true
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
