--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,9 +57,16 @@ dependencies:
   logger: 2.0.2+1
   package_info_plus: 5.0.1
   device_info_plus: 9.1.1
+  freezed_annotation: 2.4.1
+  google_sign_in: 6.2.1
+  sign_in_with_apple: 5.0.0
   
   # Widget
   smooth_page_indicator: 1.1.0
+
+  # Firebase
+  firebase_auth: 4.16.0
+  cloud_firestore: 4.14.0
 
 dev_dependencies:
   flutter_test:
@@ -74,6 +81,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  freezed: 2.4.6
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
