--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,7 @@ dependencies:
   # Firebase
   firebase_auth: 4.16.0
   cloud_firestore: 4.14.0
+  firebase_core: 2.24.2
 
 dev_dependencies:
   flutter_test:
