--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -144,6 +144,9 @@ flutter:
           weight: 700
         - asset: assets/fonts/Inter-Medium.ttf
           weight: 500
+    - family: Abel
+      fonts:
+        - asset: assets/fonts/Abel-Regular.ttf
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
