--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,7 @@ dependencies:
   freezed_annotation: 2.4.1
   google_sign_in: 6.2.1
   sign_in_with_apple: 5.0.0
+  shared_preferences: 2.2.2
   
   # Widget
   smooth_page_indicator: 1.1.0
