--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,7 @@ dependencies:
   convex_bottom_bar: 3.2.0
   otp_text_field: 1.1.3
   bot_toast: 4.1.3
+  board_datetime_picker: 1.4.0
 
   # Firebase
   firebase_auth: 4.16.0
