--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,8 @@ dependencies:
   google_sign_in: 6.2.1
   sign_in_with_apple: 5.0.0
   shared_preferences: 2.2.2
+  path_provider: 2.1.2
+  path: 1.8.3
   
   # Widget
   smooth_page_indicator: 1.1.0
@@ -75,11 +77,17 @@ dependencies:
   cloud_firestore: 4.14.0
   firebase_core: 2.24.2
 
+  ## Local database
+  drift: 2.14.1
+  drift_sqflite: 2.0.1
+  sqlite3_flutter_libs: 0.5.18
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
   build_runner: 2.4.7
+  drift_dev: 2.14.1
   flutter_gen_runner: 5.4.0
 
   # The "flutter_lints" package below contains a set of recommended lints to
