--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -76,6 +76,7 @@ dependencies:
   firebase_auth: 4.16.0
   cloud_firestore: 4.14.0
   firebase_core: 2.24.2
+  firebase_storage: 11.6.0
 
   ## Local database
   drift: 2.14.1
