--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -71,6 +71,8 @@ dependencies:
   bot_toast: 4.1.3
   board_datetime_picker: 1.4.0
   lottie: 3.0.0
+  syncfusion_flutter_calendar: 23.2.7
+  flutter_svg: 2.0.9
 
   # Firebase
   firebase_auth: 4.16.0
