--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,7 @@ dependencies:
   shared_preferences: 2.2.2
   path_provider: 2.1.2
   path: 1.8.3
+  cached_network_image: 3.3.1
   
   # Widget
   smooth_page_indicator: 1.1.0
@@ -71,6 +72,7 @@ dependencies:
   bot_toast: 4.1.3
   board_datetime_picker: 1.4.0
   lottie: 3.0.0
+  flutter_svg: 2.0.9
 
   # Firebase
   firebase_auth: 4.16.0
