--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,10 @@ dependencies:
   cached_network_image: 3.3.1
   modal_bottom_sheet: 3.0.0-pre
   image_cropper: 5.0.1
+  url_launcher: 6.2.3
+  webview_flutter: 4.4.4
+  share_plus: 7.2.1
+  validators: 3.0.0
   
   # Widget
   smooth_page_indicator: 1.1.0
