--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -88,6 +88,7 @@ dependencies:
   cloud_firestore: 4.14.0
   firebase_core: 2.24.2
   firebase_storage: 11.6.0
+  firebase_messaging: 14.7.10
 
   ## Local database
   drift: 2.14.1
