--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+1
+version: 1.0.2+1
 
 environment:
   sdk: '>=3.2.3 <4.0.0'
@@ -70,6 +70,7 @@ dependencies:
   webview_flutter: 4.4.4
   share_plus: 7.2.1
   validators: 3.0.0
+  flutter_local_notifications: 16.3.2
   
   # Widget
   smooth_page_indicator: 1.1.0
