--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -71,6 +71,8 @@ dependencies:
   share_plus: 7.2.1
   validators: 3.0.0
   flutter_local_notifications: 16.3.2
+  timezone: 0.9.2
+  android_alarm_manager_plus: 3.0.4
   
   # Widget
   smooth_page_indicator: 1.1.0
